# temporal-millet

./: .gitignore  .ocamlformat  LICENSE  Makefile  README.md  dune-project  index.html  temporal-millet.opam
.github/workflows/: gh-pages.yml
editors/vscode/: language-configuration.json  package.json
examples/: 3dprint.mlt  3dprint_handlers.mlt  basic_unbox.mlt  delay.mlt  fold_over_boxes.mlt  handlers.mlt  interval.mlt  operations.mlt  paint.mlt  upper-bound.mlt
src/: dune
src/00-utils/: error.ml  location.ml  print.ml  symbol.ml
src/01-language/: ast.ml  const.ml  context.ml  exception.ml  grade.ml  gradeSystem.ml  prettyPrint.ml  primitives.ml  resourceGrade.ml  tau.ml
src/02-parser/: dune  grammar.mly  lexer.mll  sugaredAst.ml  token.ml
src/03-desugarer/: desugarer.ml  desugarer.mli  dune
src/04-typechecker/: constraint.ml  primitives.ml  typechecker.ml
src/05-backends/interpreter/cli/: cliInterpreter.ml  cliInterpreter.mli  dune
src/05-backends/interpreter/core/: dune  interpreter.ml  primitives.ml
src/05-backends/interpreter/web/: dune  redexSelectorTM.ml  syntaxHighlight.ml  webInterpreter.ml  webInterpreter.mli
src/05-backends/sig/cli/: cliBackend.ml
src/05-backends/sig/core/: backend.ml
src/05-backends/sig/web/: dune  webBackend.ml
src/06-user-interface/cli/: cli.ml  dune
src/06-user-interface/core/: dune  loader.ml  stdlib.mlt
src/06-user-interface/web/: dune  model.ml  source_scan.ml  view.ml
tests/: interval.mlt  iterative_unbox.mlt  run_tests.t  test_mocked_ops.mlt  test_temporal.mlt  upper-bound.mlt
web/: index.html
(+1 files in other folders)
